# parallel-task-gui-poc

./: README.md  main.py  pyproject.toml
add_on/: labels.py
automation/: bot_one.py
kernel/: directory.py
windows/: index.py  task_one.py  task_two.py
